--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/shopping
+spring.datasource.url=jdbc:mysql://localhost:3306/order-service
 spring.datasource.username=root
 spring.datasource.password=Rishi@123
 spring.jpa.hibernate.ddl-auto=update
