--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -7,7 +7,19 @@
         <artifactId>microservice-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>16</source>
+					<target>16</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<modelVersion>4.0.0</modelVersion>
 
     <groupId>com.microservice.rishi</groupId>
     <artifactId>order-service</artifactId>
