--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/inventory_service
 spring.datasource.username=root
 spring.datasource.password=Rishi@123
 spring.jpa.hibernate.ddl-auto=create-drop  
+#create-drop  drop table everytime the service is loaded and creates the schema again
 #create-drop to only insert row ONCE
 #spring.jpa.hibernate.ddl-auto=none  --> for production
 server.port=8082
