Netflix_Eureka: Service started working, but Inventory Service multiple instances not working

--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/inventory_service
 spring.datasource.username=root
 spring.datasource.password=Rishi@123
+spring.application.name=Inventory-Service
+#spring.application.name= is added so we can see the name on Eureka Server
+
 spring.jpa.hibernate.ddl-auto=create-drop  
 #create-drop  drop table everytime the service is loaded and creates the schema again
 #create-drop to only insert row ONCE
 #spring.jpa.hibernate.ddl-auto=none  --> for production
-server.port=8082
+
+server.port=0
+#when server.port is 0 spring boot picks up a random port at startup
+
+#eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
