--- a/inventory-service/pom.xml
+++ b/inventory-service/pom.xml
@@ -48,6 +48,11 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+
 	</dependencies>
     <build>
         <plugins>
