--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -3,6 +3,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/order-service
 spring.datasource.username=root
 spring.datasource.password=Rishi@123
 spring.jpa.hibernate.ddl-auto=update
+spring.application.name=Order-Service
+#spring.application.name= is added so we can see the name on Eureka Server
 
 server.port=8081
 
+#eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
