--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,27 @@
 	<packaging>pom</packaging>
 	<properties>
 		<java.version>17</java.version>
+		<spring-cloud.version>2021.0.2</spring-cloud.version>
 	</properties>
 
 	<modules>
 		<module>product-service</module>
 		<module>order-service</module>
 		<module>inventory-service</module>
-	</modules>
+        <module>discovery-server</module>
+    </modules>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<dependencies>
 		<dependency>
