--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -2,5 +2,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/shopping
 spring.datasource.username=root
 spring.datasource.password=Rishi@123
 spring.jpa.hibernate.ddl-auto=update
+spring.application.name=Product-Service
+#spring.application.name= is added so we can see the name on Eureka Server
 
-server.port=8081
+server.port=8083
+
+#eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
