--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,8 @@
 		<module>order-service</module>
 		<module>inventory-service</module>
         <module>discovery-server</module>
-    </modules>
+		<module>api-gateway</module>
+	</modules>
 
 	<dependencyManagement>
 		<dependencies>
