API_Gateway: defining routes

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -7,3 +7,13 @@ spring.application.name=ApiGateway
 logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
 logging.level.org.springframework.cloud.gateway= TRACE
+
+#ProductService Route
+spring.cloud.gateway.routes[0].id=product-service
+spring.cloud.gateway.routes[0].uri=lb://product-service
+spring.cloud.gateway.routes[0].predicate[0]=Path=/api/product
+
+#OrderService Route
+spring.cloud.gateway.routes[1].id=order-service
+spring.cloud.gateway.routes[1].uri=lb://order-service
+spring.cloud.gateway.routes[1].predicate[0]=Path=/api/order
