--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -8,12 +8,20 @@ logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
 logging.level.org.springframework.cloud.gateway= TRACE
 
+spring.main.web-application-type=reactive
+
 #ProductService Route
+#lb is load balancing
 spring.cloud.gateway.routes[0].id=product-service
-spring.cloud.gateway.routes[0].uri=lb://product-service
-spring.cloud.gateway.routes[0].predicate[0]=Path=/api/product
+spring.cloud.gateway.routes[0].uri=lb://product-service  
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/product
 
 #OrderService Route
 spring.cloud.gateway.routes[1].id=order-service
 spring.cloud.gateway.routes[1].uri=lb://order-service
-spring.cloud.gateway.routes[1].predicate[0]=Path=/api/order
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/order
+
+#embedded datasource
+spring.datasource.url=jdbc:mysql://localhost:3306/discovery_service
+spring.datasource.username=root
+spring.datasource.password=Rishi@123
