--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -21,7 +21,21 @@ spring.cloud.gateway.routes[1].id=order-service
 spring.cloud.gateway.routes[1].uri=lb://order-service
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/order
 
+#DiscoveryServer Route
+spring.cloud.gateway.routes[2].id=discovery-server
+spring.cloud.gateway.routes[2].uri=http://localhost:8761
+spring.cloud.gateway.routes[2].predicates[0]=Path=/eureka/web
+spring.cloud.gateway.routes[2].filters[0]=SetPath=/
+
+#DiscoveryServer Static Resources Route
+spring.cloud.gateway.routes[3].id=discovery-server-static
+spring.cloud.gateway.routes[3].uri=http://localhost:8761
+spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
+#/** means whatever request after eureka/ will be routed to DS
+
+
 #embedded datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/discovery_service
 spring.datasource.username=root
 spring.datasource.password=Rishi@123
+server.port=8009
