Circuit_Breaker: application.properties & dependency addition

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -10,3 +10,21 @@ server.port=8081
 
 #eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+
+
+management.health.circuitbreaker.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoints.health.show-details=always
+
+#Resilience4J properties
+resilience4j.circuitbreaker.instances.inventory.registerHealthIndicator=true  #to see different state of CB
+resilience4j.circuitbreaker.instances.inventory.event-consumer-buffer-size=10  #
+resilience4j.circuitbreaker.instances.inventory.slidingWindowType=COUNT_BASED 
+#COUNT_BASED is set because CB doesnt change state to Closed to Open directly it waits for sometime and WindowSize is 5
+resilience4j.circuitbreaker.instances.inventory.slidingWindowSize=5
+#so after 5 request are failed it will change state
+resilience4j.circuitbreaker.instances.inventory.failureRateThreshold=50 #when 50% of calls are failed then give exception
+resilience4j.circuitbreaker.instances.inventory.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.instances.inventory.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.inventory.automaticTransitionFromOpenToHalfOpenEnabled=true
